--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   "dependencies": {
     "@iconify-json/heroicons": "^1.2.3",
     "@iconify/tailwind4": "^1.0.6",
+    "@reduxjs/toolkit": "^2.9.2",
     "@tailwindcss/vite": "^4.1.16",
+    "@tanstack/react-form": "^1.23.8",
+    "@tanstack/react-query": "^5.90.5",
     "axios": "^1.13.1",
     "daisyui": "^5.3.10",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.9.5",
+    "sonner": "^2.0.7",
     "tailwindcss": "^4.1.16",
     "zod": "^4.1.12"
   },
